--- a/parking.html
+++ b/parking.html
@@ -35,7 +35,7 @@
     <div class="display">
      <h2>停車場資訊</h2>
      <div class='attr'></div>
-     <button type="button" onclick="initMap1()">返回停車場查詢</button>
+     <button class="re" type="button" onclick="initMap1()">返回停車場查詢</button>
     </div>
     </div>
   </div>
